--- a/debtsTracker/debtsTracker/debtsTracker.csproj
+++ b/debtsTracker/debtsTracker/debtsTracker.csproj
@@ -194,16 +194,6 @@
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_add_white_24dp.png" />
     <AndroidResource Include="Resources\values\styles.xml" />
     <AndroidResource Include="Resources\layout\debt_item.axml" />
-    <AndroidResource Include="Resources\drawable-hdpi\ic_add_black_24dp.png" />
-    <AndroidResource Include="Resources\drawable-hdpi\ic_remove_black_24dp.png" />
-    <AndroidResource Include="Resources\drawable-mdpi\ic_add_black_24dp.png" />
-    <AndroidResource Include="Resources\drawable-mdpi\ic_remove_black_24dp.png" />
-    <AndroidResource Include="Resources\drawable-xhdpi\ic_add_black_24dp.png" />
-    <AndroidResource Include="Resources\drawable-xhdpi\ic_remove_black_24dp.png" />
-    <AndroidResource Include="Resources\drawable-xxhdpi\ic_add_black_24dp.png" />
-    <AndroidResource Include="Resources\drawable-xxhdpi\ic_remove_black_24dp.png" />
-    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_add_black_24dp.png" />
-    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_remove_black_24dp.png" />
     <AndroidResource Include="Resources\layout\history_item.axml" />
     <AndroidResource Include="Resources\layout\add_transaction.axml" />
     <AndroidResource Include="Resources\drawable-hdpi\ic_account_plus_black_24dp.png" />
@@ -254,6 +244,7 @@
     <Folder Include="Resources\menu\" />
     <Folder Include="Resources\anim\" />
     <Folder Include="Managers\" />
+    <Folder Include="Iterfaces\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.GooglePlayServices.Basement.42.1021.1\build\MonoAndroid70\Xamarin.GooglePlayServices.Basement.targets" Condition="Exists('..\packages\Xamarin.GooglePlayServices.Basement.42.1021.1\build\MonoAndroid70\Xamarin.GooglePlayServices.Basement.targets')" />
