--- a/debtsTracker/debtsTracker/debtsTracker.csproj
+++ b/debtsTracker/debtsTracker/debtsTracker.csproj
@@ -274,6 +274,7 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\ic_mode_edit_white_24dp.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_remove_white_24dp.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_mode_edit_white_24dp.png" />
+    <AndroidResource Include="Resources\layout\edit_name.axml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
